--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^9.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -26,13 +23,20 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-pdf/renderer": "^4.2.0",
     "@supabase/supabase-js": "^2.49.1",
+    "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "next": "16.1.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-force-graph-2d": "^1.29.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
+    "tsparticles": "^3.9.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
