--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "16.1.6",
+    "pdfjs-dist": "^5.4.624",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-force-graph-2d": "^1.29.1",
