--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,1 @@
-{
-  "name": "BioForgeOS",
-  "short_name": "BioForgeOS",
-  "description": "Gut Command Center - Build and track personalized biohacking protocols",
-  "start_url": "/dashboard",
-  "display": "standalone",
-  "background_color": "#0c1222",
-  "theme_color": "#16a34a",
-  "orientation": "portrait-primary",
-  "icons": [
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ]
-}
+{"name":"BioForgeOS","short_name":"BioForgeOS","description":"Gut Command Center - Build and track personalized biohacking protocols","start_url":"/dashboard","display":"standalone","background_color":"#0c1222","theme_color":"#16a34a","orientation":"portrait-primary","icons":[]}
